feat: updated logic to load domains from csv file

--- a/src/app/clients/office-form/office-form.component.html
+++ b/src/app/clients/office-form/office-form.component.html
@@ -219,7 +219,8 @@
           <!-- Form input -->
 
           <!-- Image Preview -->
-          <img class="hidden sm:block" src="assets/img/preview.png" alt="">
+          <img class="hidden w-24 h-24 rounded-full sm:block"
+            [src]="mebAdmin.photo ? mebAdmin.photo : 'assets/img/preview.png'" alt="">
           <!-- End Image Preview -->
         </div>
         <!-- End Form row -->
@@ -273,7 +274,8 @@
           <!-- Form input -->
 
           <!-- Image Preview -->
-          <img class="hidden sm:block" src="assets/img/preview.png" alt="">
+          <img class="hidden w-24 h-24 rounded-full sm:block"
+            [src]="clientAdmin.photo ? clientAdmin.photo : 'assets/img/preview.png'" alt="">
           <!-- End Image Preview -->
         </div>
         <!-- End Form row -->
@@ -328,7 +330,8 @@
           <!-- Form input -->
 
           <!-- Image Preview -->
-          <img class="hidden sm:block" src="assets/img/preview.png" alt="">
+          <img class="hidden w-24 h-24 rounded-full sm:block"
+            [src]="repairAdmin.photo ? repairAdmin.photo : 'assets/img/preview.png'" alt="">
           <!-- End Image Preview -->
         </div>
         <!-- End Form row -->
@@ -383,7 +386,8 @@
           <!-- Form input -->
 
           <!-- Image Preview -->
-          <img class="hidden sm:block" src="assets/img/preview.png" alt="">
+          <img class="hidden w-24 h-24 rounded-full sm:block"
+            [src]="maintenanceAdmin.photo ? maintenanceAdmin.photo : 'assets/img/preview.png'" alt="">
           <!-- End Image Preview -->
         </div>
         <!-- End Form row -->
@@ -438,7 +442,8 @@
           <!-- Form input -->
 
           <!-- Image Preview -->
-          <img class="hidden sm:block" src="assets/img/preview.png" alt="">
+          <img class="hidden w-24 h-24 rounded-full sm:block"
+            [src]="inventoryAdmin.photo ? inventoryAdmin.photo : 'assets/img/preview.png'" alt="">
           <!-- End Image Preview -->
         </div>
         <!-- End Form row -->
