--- a/src/app/clients/client-form/client-form.component.html
+++ b/src/app/clients/client-form/client-form.component.html
@@ -136,14 +136,18 @@
             <select [(ngModel)]="mebAdmin" required
               class="bg-gray-100 border-none rounded-md focus:ring-brand focus:outline-none focus:border-brand"
               name="meb_admin" id="meb_admin">
-              <option *ngFor="let user of users$ | async" [ngValue]="user"> {{user.firstName + ' ' + user.lastName}}
-              </option>
+              <ng-container *ngFor="let user of users$ | async">
+                <option *ngIf="user.role === 'meb-admin'" [ngValue]="user"> {{user.firstName + ' ' +
+                  user.lastName}}
+                </option>
+              </ng-container>
             </select>
           </div>
           <!-- Form input -->
 
           <!-- Image Preview -->
-          <img class="hidden sm:block" src="assets/img/preview.png" alt="">
+          <img class="hidden w-24 h-24 rounded-full sm:block"
+            [src]="mebAdmin.photo ? mebAdmin.photo : 'assets/img/preview.png'" alt="">
           <!-- End Image Preview -->
         </div>
         <!-- End Form row -->
