--- a/src/app/clients/client-list/client-list.component.html
+++ b/src/app/clients/client-list/client-list.component.html
@@ -131,25 +131,31 @@
     <div [ngClass]="{'opacity-0': !showDomainModal, 'opacity-100': showDomainModal}"
       class="inline-block overflow-hidden text-left align-bottom transition-all transform bg-white shadow-xl rounded-xl sm:my-8 sm:align-middle sm:max-w-xl sm:w-full">
       <div class="px-4 pt-5 pb-4 bg-brand sm:p-6 sm:pb-4">
-        <h1 class="text-xl text-white sm:text-3xl">Dominio autorizado</h1>
+        <h1 class="text-xl text-white sm:text-3xl">Dominios autorizados</h1>
       </div>
       <div class="px-12 py-12 bg-white sm:flex sm:items-start">
         <!-- Form row -->
         <div class="flex items-center justify-center w-full space-x-8">
           <!-- Form input -->
-          <div class="flex flex-col w-full h-16">
-            <label class="text-gray-400" for="domain"> Dominio:</label>
-            <input name="domain" [(ngModel)]="newDomain" required
-              class="bg-gray-100 border-none rounded-md focus:ring-brand focus:outline-none focus:border-brand"
-              type="text">
+          <div class="flex flex-col items-center w-full h-16">
+            <label
+              class="flex flex-col items-center w-64 px-4 py-6 tracking-wide uppercase transition-all duration-150 ease-linear bg-white border rounded-md shadow-md cursor-pointer text-brand border-blue hover:bg-brand hover:text-white">
+              <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24"
+                stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="M7 16a4 4 0 01-.88-7.903A5 5 0 1115.9 6L16 6a5 5 0 011 9.9M15 13l-3-3m0 0l-3 3m3-3v12" />
+              </svg>
+              <span class="mt-2 text-base leading-normal">{{fileName ? fileName : 'Cargar csv'}}</span>
+              <input accept=".csv" (change)="fileChanged($event)" type='file' class="hidden" />
+            </label>
           </div>
           <!-- Form input -->
         </div>
         <!-- End Form row -->
       </div>
       <div class="px-4 py-3 bg-gray-50 sm:px-6 sm:flex sm:flex-row-reverse">
-        <button (click)="closeDomainModal(true)" type="button" [ngClass]="{'opacity-40 cursor-default': !newDomain}"
-          [disabled]="!newDomain"
+        <button (click)="closeDomainModal(true)" type="button"
+          [ngClass]="{'opacity-40 cursor-default': !newDomains.length}" [disabled]="!newDomains.length"
           class="inline-flex justify-center w-full px-4 py-2 text-base font-medium text-white border border-transparent rounded-md shadow-sm bg-brand hover:bg-green-900 focus:outline-none sm:ml-3 sm:w-auto sm:text-sm">
           Guardar
 
