--- a/src/app/clients/client-list/client-list.component.html
+++ b/src/app/clients/client-list/client-list.component.html
@@ -49,7 +49,7 @@
               </svg>
             </div>
           </td>
-          <td class="p-2"> 0 </td>
+          <td class="p-2"> <span>{{client.users?.length}}</span> </td>
           <td class="p-2">
             <svg [routerLink]="['/clientes', client.id, 'editar']" xmlns="http://www.w3.org/2000/svg"
               class="w-6 h-6 m-auto cursor-pointer focus:outline-none hover:text-green-900" fill="none"
