--- a/src/app/clients/offices-list/offices-list.component.html
+++ b/src/app/clients/offices-list/offices-list.component.html
@@ -1,4 +1,20 @@
 <div class="flex flex-col items-center justify-center h-full space-y-4 py-14 sm:w-full">
+  <!-- No Team Members -->
+  <div *ngIf="client.offices?.length === 0" class="flex flex-col items-center justify-center w-full h-full space-y-4">
+    <p>Este cliente no posee sedes</p>
+
+    <!-- Add Member Btn -->
+    <button [routerLink]="['/clientes', client.id, 'crear-sede']" class="btn-primary hover:bg-green-900">
+      <span>Crear nueva sede</span>
+      <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+          d="M12 9v3m0 0v3m0-3h3m-3 0H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z" />
+      </svg>
+    </button>
+    <!-- End Add Member Btn -->
+
+  </div>
+  <!-- End No Team Members -->
   <!-- Offices Table -->
   <table *ngIf="client && client.offices?.length"
     class="hidden w-full text-xs text-center table-auto sm:table sm:text-lg">
