--- a/src/app/team/team/team.component.html
+++ b/src/app/team/team/team.component.html
@@ -21,6 +21,15 @@
       </svg>
     </button>
     <!-- End Add Client Btn -->
+    <!-- Add Admin Btn -->
+    <button *ngIf="showAdminBtn" routerLink="admin-clientes/nuevo" class="btn-primary hover:bg-green-900">
+      <span class="hidden sm:flex">Crear nuevo administrador</span>
+      <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+          d="M12 9v3m0 0v3m0-3h3m-3 0H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z" />
+      </svg>
+    </button>
+    <!-- End Add Admin Btn -->
   </div>
   <router-outlet></router-outlet>
 </div>
