--- a/src/app/clients/offices-list/offices-list.component.html
+++ b/src/app/clients/offices-list/offices-list.component.html
@@ -26,6 +26,7 @@
         <th>Ciudad</th>
         <th>Latitud</th>
         <th>Longitud</th>
+        <th>Eliminar</th>
       </tr>
     </thead>
     <tbody>
@@ -36,6 +37,14 @@
           <td class="p-2"> {{office.city}} </td>
           <td class="p-2"> {{office.location.lat}} </td>
           <td class="p-2"> {{office.location.lng}} </td>
+          <td class="p-2">
+            <svg (click)="confirmDelete(office.id)" xmlns="http://www.w3.org/2000/svg"
+              class="w-6 h-6 m-auto cursor-pointer hover:text-green-900" fill="none" viewBox="0 0 24 24"
+              stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16" />
+            </svg>
+          </td>
 
 
 
